cambio nombre de pagina

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="assets/images/logo/icono.png" type="image/x-icon">
 
     <!-- Título que aparecerá en Google -->
-    <title>Proyecto de Tesis - Arenas Sulca Abigail Milagros | Lescano Icochea José Luis</title>
+    <title>Proyecto de Tesis  - Lescano Icochea José Luis | Arenas Sulca Abigail Milagros</title>
     
     <!-- Descripción que aparece debajo del título en Google -->
     <meta name="description" content="Sitio oficial del proyecto de proyecto de tesis de Arenas Sulca Abigail Milagros | Lescano Icochea José Luis">
