--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="assets/images/logo/icono.png" type="image/x-icon">
+    <link rel="icon" href="assets/images/logo/iconoa.png" type="image/x-icon">
 
     <!-- Título que aparecerá en Google -->
     <title>Proyecto de Tesis-Lescano/Arenas </title>
@@ -24,14 +24,14 @@
     <meta property="og:title" content="Proyecto Tesis Arenas Sulca Abigail Milagros | Lescano Icochea José Luiso">
     <meta property="og:description" content="Proyecto de tesis de Arenas Sulca Abigail Milagros y Lescano Icochea José Luis">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://luisantonyhg.github.io/ProyectoTesisHuamaniGonzalesLuisAntony-CasalloVeliz-PalaciosCarrillo/">
-    <meta property="og:image" content="https://luisantonyhg.github.io/ProyectoTesisHuamaniGonzalesLuisAntony-CasalloVeliz-PalaciosCarrillo/assets/img/portada.jpg">
+    <meta property="og:url" content="https://joselescano.github.io/ProyectoTesisLescano_Arenas_2025/">
+    <meta property="og:image" content="https://joselescano.github.io/ProyectoTesisLescano_Arenas_2025/assets/img/portada.jpg">
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Proyecto Tesis Arenas Sulca Abigail Milagros | Lescano Icochea José Luis">
     <meta name="twitter:description" content="Proyecto Tesis Arenas Sulca Abigail Milagros | Lescano Icochea José Luis">
-    <meta name="twitter:image" content="https://luisantonyhg.github.io/ProyectoTesisHuamaniGonzalesLuisAntony-CasalloVeliz-PalaciosCarrillo/assets/img/portada.jpg">
+    <meta name="twitter:image" content="https://joselescano.github.io/ProyectoTesisLescano_Arenas_2025//assets/img/portada.jpg">
     
     <!-- Estilos -->
     <link rel="stylesheet" href="assets/css/style.css">
