--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@
                <td style="padding: 20px 15px; border: 1px solid #333; text-align: center; vertical-align: middle; height: 80px; transition: all 0.3s ease;">
                
                     <div class="dropdown">
-                       <a href="assets\documentos\semana13\G7 PROYECTO SEMANA 13.docx" target="_blank" class="btn btn-secondary" style="display: flex; align-items: center;">
+                       <a href="assets\documentos\semana13\G7 PROYECTO SEMANA_ 13.docx" target="_blank" class="btn btn-secondary" style="display: flex; align-items: center;">
                            <img 
                            src="assets/images/box-item/word.png" 
                            alt="word" 
