arreglé archivo  semana 14_

--- a/index.html
+++ b/index.html
@@ -1109,12 +1109,12 @@
                    style="padding: 20px 15px; border: 1px solid #333; text-align: center; vertical-align: middle; height: 80px; transition: all 0.3s ease;">
            
                    <div class="dropdown">
-           <!--            <a href="assets\documentos\semana2\G7 PROYECTO SEMANA 2.docx" target="_blank" class="btn btn-secondary"
+                       <a href="assets\documentos\semana14\G7 PROYECTO SEMANA 14.docx" target="_blank" class="btn btn-secondary"
                            style="display: flex; align-items: center;">
                            <img src="assets/images/box-item/word.png" alt="word"
                                style="height: 40px; margin-left: 8px; margin-right: 8px;" />
                            <span class="inner">Word GRUPO 7</span>
-                       </a>-->
+                       </a>
                    </div>
            
                </td>
